fixed horizontal scroll issue and gave padding to bio-info

--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -27,6 +27,10 @@ h2 {
   width: max-content;
 }
 
+#app {
+  width: 100%;
+}
+
 @media (max-width: 419px) {
   h2 {
     font-size: 40px;
