--- a/assets/stylesheets/cards.css
+++ b/assets/stylesheets/cards.css
@@ -69,6 +69,7 @@
 .bio-info {
   padding: 8px;
   line-height: 30px;
+  padding-left: 24px;
 }
 
 .bio-info p {
@@ -102,7 +103,6 @@
 }
 
 footer {
-  width: 100%;
   height: 100px;
   background-color: rgb(20,20,20);
   display: flex;
@@ -150,6 +150,7 @@ footer img:hover {
 
   .bio-info {
     width: 100%;
+    padding-left: 0;
   }
 
   .skills-box {
