--- a/assets/stylesheets/hero.css
+++ b/assets/stylesheets/hero.css
@@ -2,6 +2,7 @@ header {
   background-color: rgb(20,20,20);
   color: rgb(245,245,245);
   height: 100vh;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
